--- a/ios/link-assets-manifest.json
+++ b/ios/link-assets-manifest.json
@@ -2,44 +2,68 @@
   "migIndex": 1,
   "data": [
     {
-      "path": "assets/fonts/Lato-Black.ttf",
-      "sha1": "a001eb827743636e04f8efa7d4aeedf0541c46ac"
+      "path": "assets/fonts/PlusJakartaSans-Bold.ttf",
+      "sha1": "1ca854f4f176fc36053a862e83ddb85c937d99f1"
     },
     {
-      "path": "assets/fonts/Lato-BlackItalic.ttf",
-      "sha1": "b490ec02c69bb74f5b4f487c59e984891c8da71c"
+      "path": "assets/fonts/PlusJakartaSans-BoldItalic.ttf",
+      "sha1": "15116213e5b1ac789b112f67089dbe129b20d66e"
     },
     {
-      "path": "assets/fonts/Lato-Bold.ttf",
-      "sha1": "542498221d97bee5bdbccf86ee8890bf8e8005c9"
+      "path": "assets/fonts/PlusJakartaSans-ExtraBold.ttf",
+      "sha1": "b91e78ee4c46dd6814f72dcdeb20ec9a0653c41b"
     },
     {
-      "path": "assets/fonts/Lato-BoldItalic.ttf",
-      "sha1": "6bf491e78e16d3b9c8a55752e1bd658e15ed7f19"
+      "path": "assets/fonts/PlusJakartaSans-ExtraBoldItalic.ttf",
+      "sha1": "9273353ae60ee8c68480653730e4e043436ad161"
     },
     {
-      "path": "assets/fonts/Lato-Italic.ttf",
-      "sha1": "190187b720ec2f2ff2e4281237e301000e09673f"
+      "path": "assets/fonts/PlusJakartaSans-ExtraLight.ttf",
+      "sha1": "4e273fb7cdb12ea65e5ecd9532227706b50a4d0e"
     },
     {
-      "path": "assets/fonts/Lato-Light.ttf",
-      "sha1": "ad0d178564445a535b15d417f5b18019923d3bab"
+      "path": "assets/fonts/PlusJakartaSans-ExtraLightItalic.ttf",
+      "sha1": "d74a96f55c45db162b3673e5460646fe53c8eb11"
     },
     {
-      "path": "assets/fonts/Lato-LightItalic.ttf",
-      "sha1": "34388d9a3b64380c9f08d424d0adaa88a0d1650a"
+      "path": "assets/fonts/PlusJakartaSans-Italic.ttf",
+      "sha1": "b5810ea3c5f85eac197c2ab14c8ed46319a22135"
     },
     {
-      "path": "assets/fonts/Lato-Regular.ttf",
-      "sha1": "e923c72eda5e50a87e18ff5c71e9ef4b3b6455a3"
+      "path": "assets/fonts/PlusJakartaSans-Light.ttf",
+      "sha1": "09dee14f5d88bee269c2ee871a7a3d2a29f5a073"
     },
     {
-      "path": "assets/fonts/Lato-Thin.ttf",
-      "sha1": "07290446bee3f81ce501a3c3dbfde6097c70ca15"
+      "path": "assets/fonts/PlusJakartaSans-LightItalic.ttf",
+      "sha1": "183869dec5a7f6e2732de716441e7dfd123bee04"
     },
     {
-      "path": "assets/fonts/Lato-ThinItalic.ttf",
-      "sha1": "ff4a1a9fe2dcc41d993f4c5067a3baa1c456ff97"
+      "path": "assets/fonts/PlusJakartaSans-Medium.ttf",
+      "sha1": "f57cafa74fe42b666f31f6da98a2a824f1bc58dd"
+    },
+    {
+      "path": "assets/fonts/PlusJakartaSans-MediumItalic.ttf",
+      "sha1": "a93151f92a649b9bd9fedb70c9b96c48b5ddd5d3"
+    },
+    {
+      "path": "assets/fonts/PlusJakartaSans-Regular.ttf",
+      "sha1": "0d9c207021f3d748204dd642d831798df6c52129"
+    },
+    {
+      "path": "assets/fonts/PlusJakartaSans-SemiBold.ttf",
+      "sha1": "4de9dd8582c316692e5bd76586a3f8824c92dbd0"
+    },
+    {
+      "path": "assets/fonts/PlusJakartaSans-SemiBoldItalic.ttf",
+      "sha1": "62bfc01cc3f69ad300b9ecec2616b2a0a4cf0cf5"
+    },
+    {
+      "path": "assets/fonts/SIL Open Font License.txt",
+      "sha1": "e3cfc508a0ab4f1403db1c007c4ccb53ec728d3c"
+    },
+    {
+      "path": "assets/icons/chevron-down.svg",
+      "sha1": "112d605ea3783cfb074f2459c61477ff5c811142"
     }
   ]
 }
